--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="ps-3">
                                     <h6>Professional & Expert</h6>
-                                    <span> our commitment to innovation sets us apart.</span>
+                                    <span> Our commitment to innovation sets us apart.</span>
                                 </div>
                             </div>
                         </div>
@@ -307,10 +307,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3 class="mb-3">Fresh Fruits</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
+                                    <p class="mb-4">Fresh fruits are nature's candy! They're not just delicious but packed with nutrients, vitamins, and antioxidants. From the tangy sweetness of oranges to the juiciness of watermelons.</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Nutrient Powerhouses</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Health Benefits</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Natural Sugars</p>
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
@@ -325,10 +325,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3 class="mb-3">Organic Spices</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
+                                    <p class="mb-4">Spices are the flavorful superheroes of the culinary world! Spices add depth, aroma, and taste to dishes, enhancing the overall culinary experience.</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Flavor Enhancement</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Preservation and Medicine</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Cultural Significance</p>
                                     <a href="about.html" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
@@ -343,10 +343,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3 class="mb-3">Fashion & Apparel</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
+                                    <p class="mb-4">Fashion and apparel encompass a vast and dynamic industry!  Fashion is ever-evolving, with trends that change seasonally and across years. </p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Trends and Styles</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Design and Creativity</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Retail and Market Trends</p>
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
@@ -361,10 +361,10 @@
                                 </div>
                                 <div class="col-md-6">
                                     <h3 class="mb-3">Fresh Vegetables</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
+                                    <p class="mb-4">Vegetables are packed with essential nutrients like vitamins (such as vitamin A, vitamin C, and vitamin K), minerals (like potassium and magnesium), fiber, and antioxidants. </p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Nutrient Density</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Diverse Types</p>
+                                    <p><i class="fa fa-check text-success me-3"></i>Dietary Diversity</p>
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                             </div>
@@ -382,8 +382,8 @@
             <div class="row gx-5">
                 <div class="col-lg-6 py-5">
                     <div class="py-5">
-                        <h1 class="text-white mb-4">Certified and Award Winning Car Repair Service Provider</h1>
-                        <p class="text-white mb-0">Eirmod sed tempor lorem ut dolores. Aliquyam sit sadipscing kasd ipsum. Dolor ea et dolore et at sea ea at dolor, justo ipsum duo rebum sea invidunt voluptua. Eos vero eos vero ea et dolore eirmod et. Dolores diam duo invidunt lorem. Elitr ut dolores magna sit. Sea dolore sanctus sed et. Takimata takimata sanctus sed.</p>
+                        <h1 class="text-white mb-4">Certified and Award Winning Goods Provider</h1>
+                        <p class="text-white mb-0">Certifications may come from regulatory bodies or industry-specific organizations. Awards can validate excellence in product quality, innovation, sustainability, or customer service. Certification and awards can instill confidence in customers, showcasing a commitment to delivering superior products. It builds trust and credibility within the market. Certified providers often comply with established standards.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -460,7 +460,11 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">About Us</h4>
+                    <p class="mb-2">About <b>Bharat Spectra</b>, Company's dealing in multiple products and have a diverse range. It can span across various industries like spices, consumer goods, textiles, and agriculture.</p>
+                </div>
+                <div class="col-lg-3 col-md-6 ">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
@@ -472,20 +476,15 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 ">
-                    <h4 class="text-light mb-4">Services</h4>
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">Links</h4>
                     <a class="btn btn-link" href="/index.html">Home</a>
                     <a class="btn btn-link" href="/about.html">About Us</a>
                     <a class="btn btn-link" href="/service.html">Products</a>
                     <a class="btn btn-link" href="/contact.html">Contact Us</a>
                 </div>
-                <div class="col-lg-3 col-md-6 ">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                <div class="col-lg-3 col-md-6 py-5">
+                    <img style="width: 100%;" src="./img/bwt-white.png" alt="">
                 </div>
             </div>
         </div>
