--- a/service.html
+++ b/service.html
@@ -117,170 +117,172 @@
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
                         <div class="wsk-cp-img">
-                            <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg"
+                            <img src="./img/products/fashion (1).jpg"
                                 alt="Product" class="img-responsive" />
                         </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Ethnic</span>
+                                <span>T-shirts</span>
                             </div>
-                            <div class="title-product">
+                            <!-- <div class="title-product">
                                 <h3>My face not my heart</h3>
-                            </div>
+                            </div> -->
                             <!-- <div class="description-prod">
                                 <p>Description Product tell me how to change playlist height size like 600px in html5
                                     player. player good work now check this link</p>
                             </div> -->
-                            <div class="card-footer">
+                            <!-- <div class="card-footer">
                                 <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
-                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/fruits (1).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Pineapple</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/spice (1).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Introvert</span>
-                            </div>
-                            <div class="title-product">
-                                <h3>My face not my heart</h3>
-                            </div>
-                            <!-- <div class="description-prod">
-                                <p>Description Product tell me how to change playlist height size like 600px in html5
-                                    player. player good work now check this link</p>
-                            </div> -->
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
-                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                                <span>Spices</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://1.bp.blogspot.com/-XL_Ba-178Fo/WVSvm5AbApI/AAAAAAAAAK4/X5109HTqUiAhPjbmz4NFVHcpL7ZWe6T3ACPcBGAYYCw/s1600/wow-29.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/vege (1).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Beauty</span>
+                                <span>Vegetables</span>
                             </div>
-                            <div class="title-product">
-                                <h3>My face not my heart</h3>
-                            </div>
-                            <!-- <div class="description-prod">
-                                 <p>Description Product tell me how to change playlist height size like 600px in html5
-                                    player. player good work now check this link</p>
-                            </div> -->
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
-                                <!-- <div class="wcf-right"><a href="#" class="buy-btn"><i
-                                            class="zmdi zmdi-shopping-basket"></i></a></div> -->
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+            <!-- ROW TWO -->
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/fashion (2).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Women Fashion</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://3.bp.blogspot.com/-iUes8qr4uC8/WVSvl6Wf_fI/AAAAAAAAAKs/JiTUUVvdbqEC_QGGaQhuVJiezIN3LIqEgCPcBGAYYCw/s1600/IMG_5367-bp.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/fruits (2).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Drama</span>
+                                <span>Orange</span>
                             </div>
-                            <div class="title-product">
-                                <h3>My face not my heart cvf ggf gfg g</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/vege (2).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Cauliflower</span>
                             </div>
-                            <!-- <div class="description-prod">
-                                <p>Description Product tell me how to change playlist height size like 600px in html5
-                                    player. player good work now check this link</p>
-                            </div> -->
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-lg-3 col-sm-6">
+                    <div class="wsk-cp-product">
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/spice (2).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
+                        <div class="wsk-cp-text">
+                            <div class="category">
+                                <span>Spices Powder</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- ROW THREE -->
             <div class="row">
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
                         <div class="wsk-cp-img">
-                            <img src="https://3.bp.blogspot.com/-eDeTttUjHxI/WVSvmI-552I/AAAAAAAAAKw/0T3LN6jABKMyEkTRUUQMFxpe6PLvtcMMwCPcBGAYYCw/s1600/001-culture-clash-matthew-gianoulis.jpg"
+                            <img src="./img/products/spice (3).jpg"
                                 alt="Product" class="img-responsive" />
                         </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Ethnic</span>
-                            </div>
-                            <div class="title-product">
-                                <h3>My face not my heart</h3>
-                            </div>
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <span>Dry Red Chilli</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://1.bp.blogspot.com/-b-2SgNUrFHg/WVSvmewWqgI/AAAAAAAAAK0/1K4YCcbYjhokHwV_IgiVJN9mEnQoWunIwCPcBGAYYCw/s1600/fashion-portrait-nicole-6347.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/vege (3).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Introvert</span>
-                            </div>
-                            <div class="title-product">
-                                <h3>My face not my heart</h3>
-                            </div>
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <span>Mix Vegetables</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://1.bp.blogspot.com/-XL_Ba-178Fo/WVSvm5AbApI/AAAAAAAAAK4/X5109HTqUiAhPjbmz4NFVHcpL7ZWe6T3ACPcBGAYYCw/s1600/wow-29.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/fashion (3).png"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Beauty</span>
-                            </div>
-                            <div class="title-product">
-                                <h3>My face not my heart</h3>
-                            </div>
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <span>Men Shirts</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3 col-lg-3 col-sm-6">
                     <div class="wsk-cp-product">
-                        <div class="wsk-cp-img"><img
-                                src="https://3.bp.blogspot.com/-iUes8qr4uC8/WVSvl6Wf_fI/AAAAAAAAAKs/JiTUUVvdbqEC_QGGaQhuVJiezIN3LIqEgCPcBGAYYCw/s1600/IMG_5367-bp.jpg"
-                                alt="Product" class="img-responsive" /></div>
+                        <div class="wsk-cp-img">
+                            <img src="./img/products/fruits (3).jpg"
+                                alt="Product" class="img-responsive" />
+                        </div>
                         <div class="wsk-cp-text">
                             <div class="category">
-                                <span>Drama</span>
-                            </div>
-                            <div class="title-product">
-                                <h3>My face not my heart cvf ggf gfg g</h3>
-                            </div>
-                            
-                            <div class="card-footer">
-                                <div class="wcf-left"><span class="price">Rp500.000</span></div>
+                                <span>Papaya</span>
                             </div>
                         </div>
                     </div>
@@ -293,10 +295,13 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">About Us</h4>
+                    <p class="mb-2">About <b>Bharat Spectra</b>, Company's dealing in multiple products and have a diverse range. It can span across various industries like spices, consumer goods, textiles, and agriculture.</p>
+                </div>
+                <div class="col-lg-3 col-md-6 ">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001
-                    </p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bharatspectra.com</p>
                     <div class="d-flex pt-2">
@@ -306,21 +311,15 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 ">
-                    <h4 class="text-light mb-4">Services</h4>
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">Links</h4>
                     <a class="btn btn-link" href="/index.html">Home</a>
                     <a class="btn btn-link" href="/about.html">About Us</a>
                     <a class="btn btn-link" href="/service.html">Products</a>
                     <a class="btn btn-link" href="/contact.html">Contact Us</a>
                 </div>
-                <div class="col-lg-3 col-md-6 ">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button"
-                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                <div class="col-lg-3 col-md-6 py-5">
+                    <img style="width: 100%;" src="./img/bwt-white.png" alt="">
                 </div>
             </div>
         </div>
@@ -328,7 +327,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="">Business World Trade,</a> All Right Reserved.
+                        &copy; <a class="border-bottom" href="">Business World Trade</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="">Business World Trade</a>
                     </div>
                 </div>
@@ -337,6 +336,7 @@
     </div>
     <!-- Footer End -->
 
+    <!-- Footer End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
