--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-12">
                     <div class="section_title_all text-center">
                         <h3 class="font-weight-bold">Welcome To <span class="text-custom">Bharat Spectra</span></h3>
-                        <p class="section_subtitle mx-auto text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br/>Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section_subtitle mx-auto text-muted">Company's dealing in multiple products and have a diverse range. <br> It can span across various industries like spices, consumer goods, textiles, and agriculture.</p>
                         <div class="">
                             <i class=""></i>
                         </div>
@@ -125,10 +125,10 @@
                     <div class="about_header_main mt-2">
                         <div class="about_icon_box">
                         </div>
-                        <h4 class="about_heading text-capitalize font-weight-bold mt-4">Lorem Ipsum is simply dummy text of the printing industry.</h4>
-                        <p class="text-muted mt-3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        <h4 class="about_heading text-capitalize font-weight-bold mt-4">Every Product, a Commitment to Excellence</h4>
+                        <p class="text-muted mt-3">Dealing in multiple products requires efficient supply chain management to ensure timely delivery and consistent quality across the product range.</p>
 
-                        <p class="text-muted mt-3"> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage.</p>
+                        <p class="text-muted mt-3"> Maintaining high-quality standards across various product lines is essential to earn and retain customer trust and loyalty. Satisfied customers are likely to share their positive experiences, acting as brand advocates and attracting new customers through word-of-mouth.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -143,10 +143,10 @@
                     <div class="about_content_box_all mt-3">
                         <div class="about_detail text-center">
                             <div class="about_icon">
-                                <i class="fas fa-pencil-alt"></i>
+                                <i class="fa fa-check-circle"></i>
                             </div>
-                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Creative Design</h5>
-                            <p class="edu_desc mt-3 mb-0 text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Quality Assurance</h5>
+                            <p class="edu_desc mt-3 mb-0 text-muted"> Defining clear quality standards and guidelines that align with customer requirements and industry best practices. </p>
                         </div>
                     </div>
                 </div>
@@ -155,10 +155,10 @@
                     <div class="about_content_box_all mt-3">
                         <div class="about_detail text-center">
                             <div class="about_icon">
-                                <i class="fab fa-angellist"></i>
+                                <i class='fas fa-shipping-fast'></i>
                             </div>
-                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">We make Best Result</h5>
-                            <p class="edu_desc mb-0 mt-3 text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Free Delivery</h5>
+                            <p class="edu_desc mb-0 mt-3 text-muted">We offer to cover the cost of shipping or delivery for our customers' purchases, eliminating the shipping fee</p>
                         </div>
                     </div>
                 </div>
@@ -167,10 +167,10 @@
                     <div class="about_content_box_all mt-3">
                         <div class="about_detail text-center">
                             <div class="about_icon">
-                                <i class="fas fa-paper-plane"></i>
+                                <i class='fas fa-phone-square-alt'></i>
                             </div>
-                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">best platform </h5>
-                            <p class="edu_desc mb-0 mt-3 text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                            <h5 class="text-dark text-capitalize mt-3 font-weight-bold">24/7 Support </h5>
+                            <p class="edu_desc mb-0 mt-3 text-muted">We provide assistance, guidance, or help to their customers around the clock, seven days a week.  </p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
     <div class="container-xxl py-3">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h1 class="mb-5">Our Expert Technicians</h1>
+                <h1 class="mb-5">Our Expert Teams</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -239,7 +239,11 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">About Us</h4>
+                    <p class="mb-2">About <b>Bharat Spectra</b>, Company's dealing in multiple products and have a diverse range. It can span across various industries like spices, consumer goods, textiles, and agriculture.</p>
+                </div>
+                <div class="col-lg-3 col-md-6 ">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
@@ -251,21 +255,15 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                
-                <div class="col-lg-4 col-md-6 ">
-                    <h4 class="text-light mb-4">Services</h4>
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">Links</h4>
                     <a class="btn btn-link" href="/index.html">Home</a>
                     <a class="btn btn-link" href="/about.html">About Us</a>
                     <a class="btn btn-link" href="/service.html">Products</a>
                     <a class="btn btn-link" href="/contact.html">Contact Us</a>
                 </div>
-                <div class="col-lg-3 col-md-6 ">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                <div class="col-lg-3 col-md-6 py-5">
+                    <img style="width: 100%;" src="./img/bwt-white.png" alt="">
                 </div>
             </div>
         </div>
