--- a/contact.html
+++ b/contact.html
@@ -122,26 +122,28 @@
                         <div class="col-md-4">
                             <div class="bg-light d-flex flex-column justify-content-center p-4">
                                 <h5 class="text-uppercase">E-mail</h5>
-                                <p class="m-0"><i class="fa fa-envelope-open text-primary me-2"></i>info@example.com</p>
+
+                                <p class="m-0"><i class="fa fa-envelope-open text-primary me-2"></i>info@bharatspectra.com</p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="bg-light d-flex flex-column justify-content-center p-4">
                                 <h5 class="text-uppercase">Address</h5>
-                                <p class="m-0"><i class="fa fa-envelope-open text-primary me-2"></i>address address address</p>
+                                <p class="m-0"><i class="fa fa-envelope-open text-primary me-2"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
                     <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6977.456547818278!2d77.6823448885504!3d29.025033333224975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390c658f8e40462d%3A0x6f296e779f67ea38!2sKanker%20Khera%2C%20Meerut%20Cantt%2C%20Meerut%2C%20Uttar%20Pradesh%20250001!5e0!3m2!1sen!2sin!4v1703237663517!5m2!1sen!2sin"
                         frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
+
                 </div>
                 <div class="col-md-6">
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
-                        <form>
+                        <form> 
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
@@ -183,7 +185,11 @@
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">About Us</h4>
+                    <p class="mb-2">About <b>Bharat Spectra</b>, Company's dealing in multiple products and have a diverse range. It can span across various industries like spices, consumer goods, textiles, and agriculture.</p>
+                </div>
+                <div class="col-lg-3 col-md-6 ">
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kanker Khera, Meerut, Uttar Pradesh, 250001</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
@@ -195,21 +201,15 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                
-                <div class="col-lg-4 col-md-6 ">
-                    <h4 class="text-light mb-4">Services</h4>
+                <div class="col-lg-3 col-md-6 ">
+                    <h4 class="text-light mb-4">Links</h4>
                     <a class="btn btn-link" href="/index.html">Home</a>
                     <a class="btn btn-link" href="/about.html">About Us</a>
                     <a class="btn btn-link" href="/service.html">Products</a>
                     <a class="btn btn-link" href="/contact.html">Contact Us</a>
                 </div>
-                <div class="col-lg-3 col-md-6 ">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                <div class="col-lg-3 col-md-6 py-5">
+                    <img style="width: 100%;" src="./img/bwt-white.png" alt="">
                 </div>
             </div>
         </div>
