--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Elevate Your Style: Where Fashion Meets Passion</h1>
-                                    <a href="/about.html" class="btn btn-primary py-3 px-5 animated slideInDown">Read more<i class="fa fa-arrow-right ms-3"></i></a>
+                                   <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Collection that embody confidence</h1>
+                                    <a href="/about.html" class="btn btn-primary py-3 px-5 animated slideInDown">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="img/WhatsApp Image 2023-12-11 at 5.52.07 PM.jpeg " alt="">
+                                    <img class="img-fluid" src="img/WhatsApp Image 2023-12-11 at 5.52.07 PM.jpeg" alt="">
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/banner.jpg" alt="Image">
+                    <img class="w-100" src="img/pexels-engin-akyurt-1435895.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center">
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
-                                    <!-- <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing //</h6> -->
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Wash Service Center</h1>
+                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">"Spice up your life, one flavor at a time!"</h1>
                                     <a href="/about.html" class="btn btn-primary py-3 px-5 animated slideInDown">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
-                                    <img class="img-fluid" src="img/carousel-2.png" alt="">
+                                    <img class="img-fluid" src="img/pexels-karolina-grabowska-4871153-removebg-preview.png" alt="">
                                 </div>
                             </div>
                         </div>
