--- a/service.html
+++ b/service.html
@@ -10,7 +10,6 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
     <link rel="stylesheet" href="service.css">
 
     <!-- Google Web Fonts -->
@@ -95,7 +94,7 @@
     <!-- Navbar End -->
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-2.jpg);">
+    <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/tiard-schulz-V5Bqsot6UCg-unsplash.jpg);">
         <div class="container-fluid page-header-inner py-5">
             <div class="container text-center">
                 <h1 class="display-3 text-white mb-3 animated slideInDown">Products</h1>
